--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,14 +20,14 @@ services:
     depends_on:
       - mongo
 
-  optimusUsers:
-    image: testvagrant/optimususers
-    restart: always
-    environment:
-      - DB_NAME=optimus
-      - DB_SERVER_URL=mongo:27017
-    depends_on:
-      - mongo
+#  optimusUsers:
+#    image: testvagrant/optimususers
+#    restart: always
+#    environment:
+#      - DB_NAME=optimus
+#      - DB_SERVER_URL=mongo:27017
+#    depends_on:
+#      - mongo
 
   optimusDashboard:
     image: testvagrant/optimusdashboard
