WIP Optimus Dashboard Lite with TestNG Support

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
+    id 'maven-publish'
+    id 'signing'
 
 }
 
@@ -59,4 +61,111 @@ task runMobileTests(type: Test) {
         listeners << 'com.testvagrant.optimus.dashboard.listeners.TestListener'
         outputDirectory = file("$buildDir/" + System.getProperty('tags', 'NONE'))
     }
+}
+
+task sourceJar(type: Jar) {
+    classifier "sources"
+    from sourceSets.main.allJava
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier "javadoc"
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives jar
+    archives sourceJar
+    archives javadocJar
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            customizePom(pom)
+            groupId 'com.testvagrant.optimus'
+            artifactId 'optimus-dashboard-lite'
+            version '0.0.1-alpha'
+
+            from components.java
+
+
+            artifact(sourceJar) {
+                classifier = 'sources'
+            }
+            artifact(javadocJar) {
+                classifier = 'javadoc'
+            }
+
+        }
+    }
+
+    repositories {
+        maven {
+            url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            credentials {
+                username sonatypeUsername
+                password sonatypePassword
+            }
+        }
+    }
+}
+
+def customizePom(pom) {
+    pom.withXml {
+        def root = asNode()
+
+        // eliminate test-scoped dependencies (no need in maven central POMs)
+        root.dependencies.removeAll { dep ->
+            dep.scope == "test"
+        }
+
+        // add all items necessary for maven central publication
+        root.children().last() + {
+            resolveStrategy = Closure.DELEGATE_FIRST
+
+            description 'Optimus Lite API to manage test devices and create appium driver based on platform'
+            name 'Optimus Lite'
+            url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite'
+            organization {
+                name 'com.testvagrant.optimus'
+                url 'https://gitlab.com/testvagrant/automation-platform'
+            }
+            issueManagement {
+                system 'GitLab'
+                url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite/issues'
+            }
+            licenses {
+                license {
+                    name 'MIT License'
+                    url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite/-/blob/master/LICENSE'
+                    distribution 'repo'
+                }
+            }
+            scm {
+                url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite'
+                connection 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite.git'
+                developerConnection 'git@gitlab.com:testvagrant/automation-platform/optimus-dashboard-lite.git'
+            }
+            developers {
+                developer {
+                    name 'Sudarshan GS'
+                }
+                developer {
+                    name 'Krishnanand B'
+                }
+            }
+        }
+    }
+}
+
+model {
+    tasks.generatePomFileForMavenJavaPublication {
+        destination = file("$buildDir/generated-pom.xml")
+    }
+}
+
+
+signing {
+    sign publishing.publications
 }
