--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,23 +20,23 @@ services:
     depends_on:
       - mongo
 
-  optimusUsers:
-    image: testvagrant/optimususers
-    restart: always
-    environment:
-      - DB_NAME=optimus
-      - DB_SERVER_URL=mongo:27017
-    depends_on:
-      - mongo
-
-  optimusDashboard:
-    image: testvagrant/optimusdashboard
-    ports:
-      - "9901:9900"
-    environment:
-      - DE_ENV=production
-      - DB_SERVER_URL=mongo:27017
-      - DB_NAME=optimus?authSource=admin
-    restart: always
-    depends_on:
-      - mongo
+#  optimusUsers:
+#    image: testvagrant/optimususers
+#    restart: always
+#    environment:
+#      - DB_NAME=optimus
+#      - DB_SERVER_URL=mongo:27017
+#    depends_on:
+#      - mongo
+#
+#  optimusDashboard:
+#    image: testvagrant/optimusdashboard
+#    ports:
+#      - "9901:9900"
+#    environment:
+#      - DE_ENV=production
+#      - DB_SERVER_URL=mongo:27017
+#      - DB_NAME=optimus?authSource=admin
+#    restart: always
+#    depends_on:
+#      - mongo
