--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.0-jre'
 
-    //optimus
+    //Testvagrant
     implementation 'com.testvagrant.ekam:ekam-api:0.0.1-alpha'
 
     // square
@@ -50,20 +50,6 @@ dependencies {
     implementation 'org.testng:testng:6.14.3'
 }
 
-task runMobileTests(type: Test) {
-    outputs.upToDateWhen { false }
-    useTestNG {
-        parallel = "tests"
-        threadCount = 4
-        includeGroups System.getProperty("tags", "checkRates")
-        testLogging.showStandardStreams = true
-        useDefaultListeners true
-        listeners << 'com.testvagrant.optimus.dashboard.listeners.ReportListener'
-        listeners << 'com.testvagrant.optimus.dashboard.listeners.TestListener'
-        outputDirectory = file("$buildDir/" + System.getProperty('tags', 'NONE'))
-    }
-}
-
 task sourceJar(type: Jar) {
     classifier "sources"
     from sourceSets.main.allJava
@@ -84,9 +70,9 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             customizePom(pom)
-            groupId 'com.testvagrant.optimus'
-            artifactId 'optimus-dashboard-lite'
-            version '0.0.3-alpha'
+            groupId 'com.testvagrant.ekam'
+            artifactId 'ekam-report-publisher'
+            version '0.0.1-beta'
 
             from components.java
 
@@ -125,28 +111,28 @@ def customizePom(pom) {
         root.children().last() + {
             resolveStrategy = Closure.DELEGATE_FIRST
 
-            description 'Optimus Lite API to manage test devices and create appium driver based on platform'
-            name 'Optimus Lite'
-            url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite'
+            description 'Ekam Report publisher for dashboard'
+            name 'Ekam Report Publisher'
+            url 'https://gitlab.com/testvagrant/automation-platform/ekam-studio/ekam-report-publisher'
             organization {
-                name 'com.testvagrant.optimus'
+                name 'com.testvagrant.ekam'
                 url 'https://gitlab.com/testvagrant/automation-platform'
             }
             issueManagement {
                 system 'GitLab'
-                url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite/issues'
+                url 'https://gitlab.com/testvagrant/automation-platform/ekam-studio/ekam-report-publisher/issues'
             }
             licenses {
                 license {
                     name 'MIT License'
-                    url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite/-/blob/master/LICENSE'
+                    url 'https://gitlab.com/testvagrant/automation-platform/ekam-studio/ekam-report-publisher/-/blob/master/LICENSE'
                     distribution 'repo'
                 }
             }
             scm {
-                url 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite'
-                connection 'https://gitlab.com/testvagrant/automation-platform/optimus-dashboard-lite.git'
-                developerConnection 'git@gitlab.com:testvagrant/automation-platform/optimus-dashboard-lite.git'
+                url 'https://gitlab.com/testvagrant/automation-platform/ekam-studio/ekam-report-publisher'
+                connection 'https://gitlab.com/testvagrant/automation-platform/ekam-studio/ekam-report-publisher.git'
+                developerConnection 'git@gitlab.com:testvagrant/automation-platform/ekam-studio/ekam-report-publisher.git'
             }
             developers {
                 developer {
