--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     // This dependency is used by the application.
-    implementation 'com.google.guava:guava:28.0-jre'
+    implementation('com.google.guava:guava:30.1.1-jre')
 
     //Testvagrant
     implementation 'com.testvagrant.ekam:ekam-api:0.0.1-alpha'
