--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ sourceCompatibility = 1.8
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
@@ -38,7 +39,8 @@ dependencies {
 
 
     //mongodb
-    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.4.2'
+//    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.4.2'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.11'
 
     //lombok
     implementation('org.projectlombok:lombok:1.18.12')
@@ -74,7 +76,7 @@ publishing {
             customizePom(pom)
             groupId 'com.testvagrant.ekam'
             artifactId 'ekam-report-publisher'
-            version '0.0.3-beta'
+            version '0.0.4-beta'
 
             from components.java
 
