--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ publishing {
             customizePom(pom)
             groupId 'com.testvagrant.ekam'
             artifactId 'ekam-report-publisher'
-            version '0.0.3-beta'
+            version '0.0.4'
 
             from components.java
 
